# K8sDiscovery

./: .dockerignore  .drone.yml  .gitignore  .vc.yaml  Dockerfile  Makefile  Readme.md  catalog-info.yaml  devspace.yaml  mkdocs.yml
Chart/: .gitignore  .vc.yaml  Chart.yaml  devspace.yaml  values.yaml
Chart/scrape_configs/: default.yaml.disabled  kube-state-metrics.yaml  kubelet-cadvisor.yaml  kubelet-metrics.yaml  kubelet-probes.yaml  prometheus-node-exporter.yaml
Chart/templates/: clusterrole.yaml  clusterrolebinding.yaml  continuousc-config.yaml  discovery-statefulset.yaml  persistenvolumeclaim.yaml  scrape-configs.yaml  serviceaccount.yaml
Discovery/: .vc.yaml  Cargo.toml  Dockerfile  devspace.yaml
Discovery/src/: app.rs  auth.rs  error.rs  graph.rs  main.rs  resources.rs  state.rs
docs/: api.md  development.md  installation.md  readme.md  release.md
